Mapping de la partie corps (#87)
* Ajout des ressources CDA Corps

* Correction de l'erreur du type IVL_INT

* Delete input/fsh/MappingML_CDA_FHIR_Corps directory

* Stop tracking local working repositories

* Mapping entre ML/CDA/FHIR de la partie corps

* Création de nx mappings

* MAJ mapping suite review de NRISS

* MAJ mapping suite review de NRISS

* MAJ modèle logique corps

* MAJ de la requete sql pour récupération des mappings de l'entete

* Création de nouveaux mapping pour le corps

* Mapping de la partie corps entre ML/CDA/FHIR

* MAJ mapping corps

--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -172,14 +172,14 @@ groups:
       - StructureDefinition/fr-lm-signes-vitaux
       - StructureDefinition/fr-lm-statut-document
       - StructureDefinition/fr-lm-statut-fonctionnel
-      - StructureDefinition/fr-lm-traitement
+      - StructureDefinition/fr-lm-traitements
       - StructureDefinition/fr-lm-traitement-sortie 
       - StructureDefinition/fr-lm-traitements-administres
       - StructureDefinition/fr-lm-vaccinations
       - StructureDefinition/fr-lm-resultats-examen-imagerie
 
   #Entrées et éléments transversaux
-  Modèles logiques métiers des composants élémentaires: 
+  Modèles logiques métier des composants élémentaires: 
     name: Modèles logiques métier des composants élémentaires
     description: Modèles de données métier représentant les concepts élémentaires, modélisés indépendamment de la syntaxe et de façon plus accessible pour le métier que les éléments techniques CDA et FHIR.
     resources:
@@ -235,7 +235,7 @@ groups:
       - StructureDefinition/fr-lm-signe-vital
       - StructureDefinition/fr-lm-signe-vital-observe
       - StructureDefinition/fr-lm-statut
-      - StructureDefinition/fr-lm-traitements
+      - StructureDefinition/fr-lm-traitement
       - StructureDefinition/fr-lm-vaccin-recommande
       - StructureDefinition/fr-lm-vaccination
       - StructureDefinition/fr-lm-notes-dispensateur
@@ -457,6 +457,13 @@ groups:
       - FRDiagnosticReportLMCDAFHIR
       - FRDocumentReferenceLMCDAFHIR
       - FREncounterLMCDAFHIR
+      - FRFamilyMemberHistoriesLMCDAFHIR
+      - FRFamilyMemberHistoryLMCDAFHIR
+      - FRImagingStudyLMCDAFHIR
+      - FRImmunizationLMCDAFHIR
+      - FRImmunizationRecommendationLMCDAFHIR
+      - FRMediaLMCDAFHIR
+      - FRMedicationAdministrationLMCDAFHIR
  
 resources: 
   Binary/BIO-CR-BIO-2024.01-Microbiologie-V1:
